SUBDIRS=PETE

VPATH=@top_srcdir@
VPATH+=@top_srcdir@/include

include_HEADERS = qdp_defs.h \
		qdp_forward.h \
		qdp_globalfuncs.h \
		qdp_inner.h \
		qdp_io.h \
		qdp_layout.h \
		qdp_map.h \
		qdp_multi.h \
		qdp_newops.h \
		qdp_outer.h \
		qdp_outersubtype.h \
		qdp_params.h \
		qdp_primcolormat.h \
		qdp_primcolorvec.h \
		qdp_primgamma.h \
		qdp_primitive.h \
		qdp_primmatrix.h \
		qdp_primscalar.h \
		qdp_primseed.h \
		qdp_primspinmat.h \
		qdp_primspinvec.h \
		qdp_primvector.h \
		qdp_util.h \
		qdp_xmlio.h \
		qdp_qdpexpr.h \
		qdp.h \
		qdp_qdpio.h \
		QDPOperators.h \
		qdp_qdpsubtype.h \
		qdp_qdptype.h \
		qdp_random.h \
		qdp_reality.h \
		qdp_simpleword.h \
		qdp_specializations.h \
		qdp_subset.h \
		qdp_traits.h \
		qdp_word.h \
	        qdp_scalar_specific.h \
	        qdp_parscalar_specific.h

nodist_include_HEADERS = qdp_config.h
